--- a/iWork.Web.UI/Template/Default/Controls/checkbox/switch.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/switch.html
@@ -3,8 +3,8 @@
          iv-required="false"
          iv-size="mini">
     <div class="form-group">
-        <div class="col-lg-2 checkbox-label-column"></div>
-        <div class="col-lg-10 checkbox-input-column">
+        <div class="col-md-12 checkbox-label-column"></div>
+        <div class="col-md-12 checkbox-input-column">
             <input bs-switch
                    type="checkbox"
                    ng-model="$iv-model.$iv-name"
