--- a/iWork.Web.UI/Template/Default/Controls/formfield/help-message.html
+++ b/iWork.Web.UI/Template/Default/Controls/formfield/help-message.html
@@ -1,7 +1,5 @@
 ﻿<control>
-    <div class="col-lg-2" >
-    </div>
-    <div class="col-lg-10 ">
+    <div class="col-md-12 ">
         <div class="form-help-message">
             <iv-content></iv-content>
         </div>
