--- a/iWork.Web.UI/Template/Default/Controls/magicsuggest/magicsuggest.html
+++ b/iWork.Web.UI/Template/Default/Controls/magicsuggest/magicsuggest.html
@@ -1,8 +1,8 @@
 ﻿<control iv-label=""
          iv-name="">
     <div class="form-group magicsuggest-box">
-        <label class="control-label col-md-2 col-sm-3">$iv-label</label>
-        <div class="col-md-10 col-sm-9">
+        <label class="control-label col-md-12">$iv-label</label>
+        <div class="col-md-12">
             <div magic-suggest data-name="$iv-name" class="form-control"></div>
         </div>
     </div>
