--- a/iWork.Web.UI/Template/Default/Controls/radio/radiolist.html
+++ b/iWork.Web.UI/Template/Default/Controls/radio/radiolist.html
@@ -1,7 +1,7 @@
 ﻿<control iv-label="Radio List" >
     <div class="form-group radio-list">
-        <label class="control-label col-md-2 col-sm-3">$iv-label</label>
-        <div class="col-md-10 col-sm-9">
+        <label class="control-label col-md-12">$iv-label</label>
+        <div class="col-md-12">
             <iv-content></iv-content>
         </div>
     </div>
