--- a/iWork.Web.UI/Content/css/_helper.css
+++ b/iWork.Web.UI/Content/css/_helper.css
@@ -1,2 +1,12 @@
-﻿
+﻿.unselectable {
+  -webkit-user-select: none;
+  /* Chrome/Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+ */
+  /* Rules below not implemented in browsers yet */
+  -o-user-select: none;
+  user-select: none; }
+
 /*# sourceMappingURL=_helper.css.map */
