--- a/iWork.Web.UI/Content/css/style.rtl.css
+++ b/iWork.Web.UI/Content/css/style.rtl.css
@@ -1,4 +1,22 @@
 ﻿body {
   font-family: Tahoma; }
 
+.btn-iconic.selected {
+  border-left: none;
+  border-right: 4px solid #2196F3 !important; }
+
+.member-territory .svg-inject {
+  top: -2px;
+  left: auto;
+  right: -2px; }
+.member-territory .member-territory-box {
+  right: auto;
+  left: -5px; }
+  .member-territory .member-territory-box .member-info {
+    left: auto;
+    right: 10px; }
+
+.input-group-addon:first-child {
+  border: none; }
+
 /*# sourceMappingURL=style.rtl.css.map */
