--- a/iWork.Web.UI/Content/css/style.rtl.scss
+++ b/iWork.Web.UI/Content/css/style.rtl.scss
@@ -1,3 +1,31 @@
-﻿body{
-    font-family:Tahoma;
+﻿body {
+    font-family: Tahoma;
+}
+
+
+.btn-iconic.selected {
+    border-left: none;
+    border-right: 4px solid #2196F3 !important;
+}
+
+
+.member-territory {
+    .svg-inject {
+        top: -2px;
+        left: auto;
+        right: -2px;
+    }
+
+    .member-territory-box {
+        right: auto;
+        left: -5px;
+        .member-info {
+            left: auto;
+            right: 10px;
+        }
+    }
+}
+
+.input-group-addon:first-child {
+    border: none;
 }
