--- a/iWork.Web.UI/Content/css/style.scss
+++ b/iWork.Web.UI/Content/css/style.scss
@@ -1,5 +1,9 @@
 ﻿@import '_helper.scss';
 
+.no-padding{
+    padding-left:0px;
+}
+
 * {
     -webkit-transition: all 400ms ease;
     -moz-transition: all 400ms ease;
@@ -42,6 +46,9 @@ table * {
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
     animation-duration: 0.2s;
+
+     @extend .unselectable;
+
 }
 
 header ul {
@@ -98,10 +105,20 @@ header ul li {
     font-style: normal;
 }
 
+body,
+html {
+    overflow: hidden !important;
+}
+
 body {
     font-family: 'Open Sans';
     padding-top: 72px;
-    background: #F4F3F0;
+    background: #F9F9F9;
+}
+
+.row{
+    float:left;
+    width:100%;
 }
 
 .panel-image {
@@ -114,15 +131,17 @@ body {
     }
 }
 
-.control-label span {
-    margin: 10px 0px 0px 3px;
-    float: left;
-}
+.control-label {
+    span {
+        margin: 10px 0px 0px 3px;
+        float: left;
+    }
 
-.control-label input {
-    width: 24px;
-    float: left;
-    background: none !important;
+    input {
+        width: 24px;
+        float: left;
+        background: none !important;
+    }
 }
 
 .page-container {
@@ -130,24 +149,24 @@ body {
     width: 100%;
     z-index: 4000;
     padding: 0px;
-}
 
-.page-container > div {
-    padding: 10px;
-    margin: 0px;
-    min-height: 700px;
-    background-color: #ffffff;
+    & > div {
+        padding: 10px;
+        margin: 0px;
+        min-height: 700px;
+        background-color: #ffffff;
+    }
 }
 
 .navbar-fixed-top {
     display: block;
     height: 72px;
     background: #EEEEEE;
-}
 
-.navbar-fixed-top > div {
-    margin: 0px;
-    padding: 0px;
+    & > div {
+        margin: 0px;
+        padding: 0px;
+    }
 }
 
 .navbar-fixed-top .bottom-inner-shadow {
@@ -254,28 +273,76 @@ body {
 .member-territory {
     display: block;
     width: 50px;
-    height: 50px;
     margin: 10px;
-    overflow: hidden;
-    background-color: #ffffff;
-    @include border-radius(100px);
-}
+    position: relative;
 
-.member-territory .svg-inject {
-    width: 40px;
-    height: 40px;
-    margin: 5px;
-    fill: #bbbbbb;
-}
+    .member-territory-box {
+        display: none;
+        width: 180px;
+        height: 170px;
+        position: absolute;
+        padding-top: 60px;
+        top: -5px;
+        right: -5px;
+        background: #ffffff;
+        z-index: 30000;
+        -moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.32);
+        -webkit-box-shadow: 0px 1px 2px rgba(0,0,0,0.32);
+        box-shadow: 0px 1px 2px rgba(0,0,0,0.32);
+        -ms-filter: "progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#52000000,Positive=true)";
+        filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#52000000,Positive=true);
 
-@import 'datatabels.scss';
-@import 'control.scss';
-@import '_helper.scss';
+        .member-info{
+            display:block;
+            position:absolute;
+            top:22px;
+            left:10px;
+            width:110px;
+            height:20px;
+        }
 
+        & > button {
+            display: block;
+            background-color: #EEEEEE;
+            border: none;
+            width: 90%;
+            margin: 6px auto;
+            font-size: 12px;
+            padding: 6px 0px;
+        }
 
-body,
-html {
-    overflow: hidden !important;
+        & > button:first-child {
+            background: #36A0F4;
+            color: #ffffff;
+        }
+    }
+
+    &:hover .member-territory-box {
+        display: block;
+    }
+
+    .avatar-box {
+        display: block;
+        width: 50px;
+        height: 50px;
+        background-color: #ffffff;
+        @include border-radius(100px);
+        border: 2px solid #0091EA;
+        position: relative;
+        position: absolute;
+        z-index: 31000;
+        overflow: hidden;
+    }
+
+    .svg-inject {
+        width: 40px;
+        height: 40px;
+        margin: 5px;
+        fill: #bbbbbb;
+        position: relative;
+        top: -2px;
+        left: -2px;
+    }
 }
 
 .main-content {
@@ -335,19 +402,32 @@ html {
     @include border-radius(0);
 }
 
-
 .translate-buttton-box {
-    margin-top: 26px;
+    display: block;
+    width: 100%;
     padding: 0px 6px;
+    border-top: 1px solid #cccccc;
+    padding-top: 6px;
 
     button {
+        display: block;
+        float: right;
+        width: 30px;
+        margin: 0px 5px;
         height: 22px;
         line-height: 0px;
-        padding: 3px 10px;
+        padding: 3px 0px;
+        font-size: 12px;
+        text-align:center;
     }
 
     .selected {
         background: #2c77ba !important;
-        color:#ffffff;
+        color: #ffffff;
     }
 }
+
+@import 'datatabels.scss';
+@import 'control.scss';
+@import '_helper.scss';
+@import 'overstrap.scss';
