--- a/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
@@ -4,8 +4,8 @@
          iv-name=""
          >
     <div class="form-group">
-        <div class="col-lg-2 checkbox-label-column"></div>
-        <div class="col-lg-10 checkbox-input-column">
+        <div class="col-md-12 checkbox-label-column"></div>
+        <div class="col-md-12 checkbox-input-column">
             <label for="$iv-name" class="control-label ">
                 <input type="checkbox"
                        class="form-control"
