--- a/iWork.Web.UI/Template/Default/Controls/checkbox/checklist.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/checklist.html
@@ -1,7 +1,7 @@
 ﻿<control iv-label="" >
     <div class="form-group checklist">
-        <label class="col-lg-2 control-label">$iv-label</label>
-        <div class="col-lg-10">
+        <label class="col-md-12 control-label">$iv-label</label>
+        <div class="col-md-12">
             <iv-content>
             </iv-content>
         </div>
