--- a/iWork.Web.UI/Template/Default/Controls/datepicker/time.html
+++ b/iWork.Web.UI/Template/Default/Controls/datepicker/time.html
@@ -9,8 +9,8 @@
          iv-autoclose="true">
 
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
-        <div class=" col-md-10 col-sm-9">
+        <label for="$iv-name" class="control-label col-md-12" translate >{{'$iv-label'}}</label>
+        <div class=" col-md-12">
             <div class='input-group date timepicker'>
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-time"></span>
