--- a/iWork.Web.UI/Template/Default/Controls/input/email.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/email.html
@@ -6,8 +6,8 @@
          iv-pattern="">
 
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
-        <div class="col-md-10 col-sm-9">
+        <label for="$iv-name" class="control-label col-md-12">$iv-label</label>
+        <div class="col-md-12">
             <input type="email"
                    class="form-control"
                    name="$iv-name"
