--- a/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
@@ -7,8 +7,8 @@
          iv-pattern="">
 
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
-        <div class="col-md-10 col-sm-9">
+        <label for="$iv-name" class="control-label col-md-12" translate >{{'$iv-label'}}</label>
+        <div class="col-md-12">
             <input type="password"
                    class="form-control"
                    name="$iv-name"
