--- a/iWork.Web.UI/Template/Default/Controls/input/spinner.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/spinner.html
@@ -6,8 +6,8 @@
          iv-max=""
          iv-step="">
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
-        <div class="col-md-10 col-sm-9">
+        <label for="$iv-name" class="control-label col-md-12" translate >{{'$iv-label'}}</label>
+        <div class="col-md-12">
             <input type="number"
                    class="form-control"
                    name="$iv-name"
