--- a/iWork.Web.UI/Template/Default/Controls/input/text.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/text.html
@@ -8,8 +8,8 @@
          iv-custom-validator="custom-validation"
          iv-custom-validator-data="data.password">
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate>{{'$iv-label'}}</label>
-        <div class="col-md-10 col-sm-9">
+        <label for="$iv-name" class="control-label col-md-12" translate>{{'$iv-label'}}</label>
+        <div class="col-md-12">
             <input type="text"
                    class="form-control"
                    name="$iv-name"
