--- a/iWork.Web.UI/Template/Default/Controls/input/textarea.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/textarea.html
@@ -7,8 +7,8 @@
          iv-mask=""
          iv-pattern="">
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
-        <div class="col-md-10 col-sm-9">
+        <label for="$iv-name" class="control-label col-md-12" translate >{{'$iv-label'}}</label>
+        <div class="col-md-12">
             <textarea class="form-control"
                       name="$iv-name"
                       id="$iv-name"
