--- a/iWork.Web.UI/Template/Default/Controls/select/select.html
+++ b/iWork.Web.UI/Template/Default/Controls/select/select.html
@@ -2,8 +2,8 @@
          iv-name=""
          iv-required="">
     <div class="form-group">
-        <label for="$iv-name-select" class="col-lg-2 control-label" translate >{{'$iv-label'}}</label>
-        <div class="col-lg-10">
+        <label for="$iv-name-select" class="col-md-12 control-label" translate >{{'$iv-label'}}</label>
+        <div class="col-md-12">
             <select class="form-control"
                     id="$iv-name-select"
                     name="$iv-name"
