--- a/iWork.Web.UI/Template/Default/Controls/uploader/dropzone.html
+++ b/iWork.Web.UI/Template/Default/Controls/uploader/dropzone.html
@@ -1,7 +1,7 @@
 ﻿<control iv-label="">
     <div class="form-group">
-        <label class="control-label col-md-2 col-sm-3" translate >{{'$iv-label'}}</label>
-        <div class=" col-md-10 col-sm-9" >
+        <label class="control-label col-md-12" translate >{{'$iv-label'}}</label>
+        <div class=" col-md-12" >
             <div class="dropzone" dropzone >
                 <div class="fallback">
                     <input name="file" type="file" multiple />
