Chnage cookie madule, fix select validation message, fix #24

--- a/iWork.Web.UI/Template/Default/Controls/button/delete.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/delete.html
@@ -3,10 +3,10 @@
          iv-title="global.areYouSure"
          iv-btn-ok-label="global.yes"
          iv-btn-cancel-label="global.no"
-         iv-placement="direction.from">
+         iv-placement="auto">
     <a class="remove-entity glyphicon glyphicon-trash"
        data-entity-id="$iv-entity-id"
-       data-placement="{{'$iv-placement' | translate }}"
+       data-placement="$iv-placement"
        data-model="$iv-model"
        delete-btn
        data-btn-ok-label="{{'$iv-btn-ok-label' | translate}}"
