--- a/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
@@ -7,7 +7,7 @@
          iv-pattern="">
 
     <div class="form-group">
-        <label for="$iv-name" class="control-label col-md-12" translate >{{'$iv-label'}}</label>
+        <label for="$iv-name" class="control-label col-md-12" translate>{{'$iv-label'}}</label>
         <div class="col-md-12">
             <input type="password"
                    class="form-control"
@@ -20,13 +20,14 @@
                    data-match="$iv-model.$iv-match"
                    ng-maxlength="$iv-maxlength" />
             <validation iv-type="validation">
-                <div ng-message="match" error>
-                    <span translate="validation.match"></span>
-                </div>
-                <div ng-message="pwd" error>
-                    <span translate="validation.pwd"></span>
-                </div>
-
+                <iv-validation>
+                    <div ng-message="match" error>
+                        <span translate="validation.match"></span>
+                    </div>
+                    <div ng-message="pwd" error>
+                        <span translate="validation.pwd"></span>
+                    </div>
+                </iv-validation>
             </validation>
         </div>
     </div>
