--- a/iWork.Web.UI/Template/Default/Controls/validation/validation.html
+++ b/iWork.Web.UI/Template/Default/Controls/validation/validation.html
@@ -27,7 +27,7 @@
             <span translate="validation.number" translate-value-name="{{'$iv-label' | translate }}"></span>
             '$iv-label' is not a valid number.
         </div>
-        <iv-content></iv-content>
+        <iv-validateion></iv-validateion>
         <!--<div ng-message="customValidation">Checking database...</div>-->
     </div>
 </control>
