--- a/iWork.Web.UI/Content/css/overstrap.scss
+++ b/iWork.Web.UI/Content/css/overstrap.scss
@@ -41,3 +41,18 @@
         box-shadow: 0px 1px 2px rgba(0,0,0,0.21);
     }
 }
+
+
+.popover-content{
+    padding:3px;
+    .btn-group{
+        display:block;
+        width:100%;
+        a{
+            display:block;
+            float:left;
+            width:100%;
+            margin-top:3px;
+        }
+    }
+}
