--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -784,4 +784,15 @@ body {
     -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.21);
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.21); }
 
+.popover-content {
+  padding: 3px; }
+  .popover-content .btn-group {
+    display: block;
+    width: 100%; }
+    .popover-content .btn-group a {
+      display: block;
+      float: left;
+      width: 100%;
+      margin-top: 3px; }
+
 /*# sourceMappingURL=style.css.map */
