--- a/iWork.Web.UI/Content/css/style.rtl.css
+++ b/iWork.Web.UI/Content/css/style.rtl.css
@@ -19,4 +19,8 @@
 .input-group-addon:first-child {
   border: none; }
 
+.form-horizontal .form-group label {
+  direction: rtl;
+  text-align: right; }
+
 /*# sourceMappingURL=style.rtl.css.map */
