--- a/iWork.Web.UI/Content/css/style.rtl.scss
+++ b/iWork.Web.UI/Content/css/style.rtl.scss
@@ -29,3 +29,9 @@
 .input-group-addon:first-child {
     border: none;
 }
+
+
+.form-horizontal .form-group label {
+    direction:rtl;
+    text-align:right;
+}
