--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -198,6 +198,12 @@ body {
   -moz-box-shadow: 0px -2px 3px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px -2px 3px 1px rgba(0, 0, 0, 0.2); }
 
+.ribbon-bar {
+  display: block;
+  width: 6px;
+  height: 72px;
+  background: #F43E00 !important; }
+
 .sub-menu {
   background: none !important;
   padding: 0px 5px 0px 0px !important; }
@@ -284,6 +290,8 @@ body {
     position: absolute;
     z-index: 31000;
     overflow: hidden; }
+    .member-territory .avatar-box img {
+      width: 100%; }
   .member-territory .svg-inject {
     width: 40px;
     height: 40px;
@@ -297,7 +305,6 @@ body {
   overflow-x: hidden;
   overflow-y: visible;
   display: block;
-  float: right;
   height: auto;
   min-height: 10px !important; }
 
